syntax='proto3';
package woops;
message WoopsConfigProto {
    int32 staleness = 1;
    string this_host = 2;
    string port = 3;
    string placement = 4;
    string consistency = 5;
    repeated string hosts = 6;
}
